--- a/assets/css/loader.css
+++ b/assets/css/loader.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
+
 body {
     font-family: 'Roboto', sans-serif;
     background-color: #12141c;
@@ -47,5 +49,5 @@ body {
 }
 
 .content {
-    display: none; /* Masquer le contenu par défaut */
+    display: none;
 }
