--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -10,7 +10,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: url("https://www.codingnepalweb.com/demos/create-glassmorphism-login-form-html-css/hero-bg.jpg") center / cover no-repeat;
+    background: url("../img/hero-bg.jpg") center / cover no-repeat;
 }
 
 .wrapper {
