--- a/assets/css/stats.css
+++ b/assets/css/stats.css
@@ -1,9 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
+
 body {
     font-family: 'Roboto', sans-serif;
     background-color: #12141c;
     color: white;
     margin: 0;
-    padding-top: 90px; /* Espace pour éviter de chevaucher la navbar fixe */
+    padding-top: 90px;
     overflow: auto;
 }
 
@@ -38,17 +40,17 @@ body {
     margin-bottom: 1em;
     display: flex;
     flex-direction: column;
-    align-items: center; /* Centrer le contenu horizontalement */
+    align-items: center;
     color: #ffffff;
 }
 
 .card-header {
     display: flex;
-    justify-content: center; /* Centrer horizontalement */
+    justify-content: center;
     width: 100%;
-    margin-bottom: 20px; /* Augmenter l'espacement sous le titre */
-    border-bottom: 1px solid #ccc; /* Ajouter une bordure sous le titre */
-    padding-bottom: 10px; /* Ajouter un padding sous le titre */
+    margin-bottom: 20px;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 10px;
 }
 
 .card-header h3 {
@@ -60,33 +62,33 @@ body {
 }
 
 .info-group {
-    background-color: #2a2d38; /* Légère variation de fond pour les sections */
+    background-color: #2a2d38;
     padding: 15px;
     border-radius: 8px;
     margin-bottom: 10px;
-    width: 90%; /* Largeur maximale pour la section */
+    width: 90%;
     display: flex;
     flex-direction: column;
-    align-items: center; /* Centrer le contenu des sections */
+    align-items: center;
 }
 
 .info-group div {
     width: 100%;
-    text-align: center; /* Centrer le texte */
-    margin-bottom: 10px; /* Espacement entre les éléments */
+    text-align: center;
+    margin-bottom: 10px;
 }
 
 .info-group div strong {
     display: block;
     font-size: 1.1rem;
     margin-bottom: 5px;
-    color: #4e91d3; /* Couleur dorée pour les labels */
+    color: #4e91d3;
 }
 
 .info-group div span {
     display: block;
     font-size: 1rem;
-    color: #bbb; /* Couleur gris clair pour les valeurs */
+    color: #bbb;
 }
 
 @media (min-width: 768px) {
