--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
-
 body {
     font-family: 'Roboto', sans-serif;
     background-color: #12141c;
@@ -136,3 +134,33 @@ button:hover img {
     margin-top: 30px;
     color: #fff;
 }
+
+@media (max-width: 768px) {
+    .wrapper {
+        width: 90%;
+        max-width: 400px;
+        margin: 0 auto;
+        padding: 20px;
+        box-sizing: border-box;
+    }
+
+    h2 {
+        font-size: 1.5rem;
+    }
+
+    .input-field input {
+        height: 35px;
+        font-size: 14px;
+    }
+
+    button {
+        padding: 10px 15px;
+        font-size: 14px;
+    }
+
+    button img {
+        width: 16px;
+        height: 16px;
+    }
+}
+
